# sh8601-rs

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  partitions.csv
.cargo/: config.toml
assets/: pack_r5d1.py
assets/rgb/: pic_1_368x448.rgb  pic_2_368x448.rgb  pic_3_368x448.rgb
examples/: movie_player.rs  movie_player_sdcard.rs  ws_18in_amoled.rs
src/: graphics_core.rs  graphics_core_features.rs  graphics_core_generic.rs  graphics_core_multi.rs  lib.rs
src/displays/: mod.rs  waveshare_18_amoled.rs
